--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 
   <title>My Akan Name - Robina</title>
 
+  <!-- CSS Files -->
+  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
 
 <body>
+
+
 
   <main>
 
@@ -40,6 +47,9 @@
     </section><!-- End section -->
 
   </main><!-- End #main -->
+
+  <!-- JS Files -->
+  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
