Added Website description

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
 <body>
 
-
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top">
+    <div style="margin: 5px;" class="position-absolute top-80 start-50 translate-middle">
+      <label style="color: dodgerblue;font-size: x-large;">MY AKAN NAME</label>
+    </div>
+  </header><!-- End Header -->
 
   <main>
 
@@ -30,7 +35,29 @@
           </div>
 
           <div class="col-lg-5 pt-4 pt-lg-0 order-2 order-lg-1">
-            
+            <h2 style="font-size: medium;">
+              <p>
+                The Akan people of Ghana frequently name their children after the day of the week they were born and the
+                order in which they were born.
+              </p>
+              <p>
+                These "day names" have furthur meanings concerning the soul and character of the person.
+              </p>
+              <p>
+                Middle names have considerably more variety and can refer to their birth order, twin status, or an
+                ancestor's middle name.
+              </p>
+              <p>
+                Most Ghananians have at least one name from this system even if they also have and English or Christian
+                name.
+              </p>
+              <p>
+                Notable figures with day names include Ghana's first president Kwameh Nkurumah and former United Nations
+                Secretary-General Kofi Annan.
+              </p>
+              <p> This application will automatically generate your Akan name based on your day of birth and gender.
+              </p>
+            </h2>
           </div>
 
           <div class="col-lg-5 order-3 order-lg-2 ">
@@ -51,6 +78,8 @@
   <!-- JS Files -->
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 
