--- a/index.html
+++ b/index.html
@@ -61,7 +61,31 @@
           </div>
 
           <div class="col-lg-5 order-3 order-lg-2 ">
-            
+            <div class="d-flex justify-content-center">
+              <form>
+                <h2 style="color:orange"><b>Get Your Akan Name Here</b></h2>
+                <br>
+
+                <!-- gender radio buttons -->
+                <div class="mb-3">
+                  <label class="form-label" style="font-weight: bold;">Gender</label>
+                  <div>
+                    <input class="form-check-input" type="radio" name="gender" id="genderMale">
+                    <label class="form-check-label" for="genderMale">
+                      Male
+                    </label>
+                  </div>
+                  <div>
+                    <input class="form-check-input" type="radio" name="gender" id="genderFemale">
+                    <label class="form-check-label" for="genderFemale">
+                      Female
+                    </label>
+                  </div>
+                </div>
+
+              
+              </form>
+            </div>
           </div>
 
           <!-- right div -->
