Added date selector

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
                   </div>
                 </div>
 
-              
+                <!-- date picker -->
+                <label for="birthDate" style="font-weight: bold;">Birth Date</label>
+                <input id="birthDate" class="form-control" type="date" />
+                <br>
+
               </form>
             </div>
           </div>
