Added submit button

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                 <input id="birthDate" class="form-control" type="date" />
                 <br>
 
+                <!-- submit button -->
+                <button id="submitBtn" type="button" onclick="submitForm()" name="Submit"
+                  class="btn btn-primary">Submit</button>
+                <br>
+
               </form>
             </div>
           </div>
