--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                   class="btn btn-primary">Submit</button>
                 <br>
 
+                <!-- akan confirmation -->
+                <div id="errorMessage" style="color:red;font-weight: bold;" class="form-text"></div>
+                <div id="akanConfirmation" style="color:orange;font-weight: bold;" class="form-text"></div>
+
               </form>
             </div>
           </div>
