--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             order in which they were born.
           </p>
           <p>
-            These "day names" have furthur meanings concerning the soul and character of the person.
+            These "day names" have further meanings concerning the soul and character of the person.
           </p>
           <p>
             Middle names have considerably more variety and can refer to their birth order, twin status, or an
